gitlab/gitlab.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-ops
  labels:
    name: kube-ops
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ce
  namespace: kube-ops
  labels:
    name: gitlab-ce
spec:
  selector:
    app: gitlab-ce
  type: NodePort 
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: ssh
    port: 22
    targetPort: 22
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab-ce
  namespace: kube-ops
spec:
  selector:
    matchLabels:
      app: gitlab-ce
  template:
    metadata:
      labels:
        app: gitlab-ce
    spec:
      containers:
      - name: gitlab-ce
        image: gitlab/gitlab-ce:latest
        volumeMounts:
          - mountPath: /var/opt/gitlab
            name: data
          - mountPath: /var/log/gitlab
            name: logs
          - mountPath: /etc/gitlab
            name: config
        ports:
        - name: http
          containerPort: 80
        - name: ssh
          containerPort: 22

      volumes:
        - name: data
          hostPath:
            path: /Users/xie/Workspaces/data/gitlab/data
        - name: logs
          hostPath:
            path: /Users/xie/Workspaces/data/gitlab/logs
        - name: config
          hostPath:
            path: /Users/xie/Workspaces/data/gitlab/config
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: kube-ops
spec:
  selector:
    app: postgresql
  ports:
  - port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: kube-ops
spec:
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
      - name: postgresql
        image: postgres:10.10-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: kube-ops
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: kube-ops
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:4.0.14-alpine
        ports:
        - containerPort: 6379
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitlab-ce
  namespace: kube-ops
  labels:
    type: ingress
    app: gitlab-ce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gitlab.foo.org
    http:
      paths:
      - backend:
          serviceName: gitlab-ce
          servicePort: 80
