gitlab/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitlab-ce
  namespace: kube-ops
spec:
  rules:
  - host: gitlab.foo.org
    http: 
      paths:
      - path: /
        backend:
          serviceName: gitlab-ce
          servicePort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: gitlab-ce
  namespace: kube-ops
  labels:
    type: ingress
    app: gitlab-ce
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: gitlab.foo.org
    http:
      paths:
      - backend:
          serviceName: gitlab-ce
          servicePort: 80
