gitlab/traefix.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-ce
  namespace: kube-ops
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`gitlab.foo.org`)
    kind: Rule
    services:
    - name: gitlab-ce
      port: 80
